--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -43,4 +43,23 @@
   </div>
   {% block content %}
   {% endblock %}
-  </body>
+  <div class="footer">
+    <div class="row networks">
+        <div class="col-md-1 networks_block1">
+            <a href="#"><img src="{% static "img/instagram.png" %}" alt="instagram"></a>
+        </div>
+        <div class="col-md-1 networks_block2">
+            <a href="#"><img src="{% static "img/telegram.png" %}" alt="telegram"></a>
+        </div>
+        <div class="col-md-1 networks_block3"> 
+            <a href="#"><img src="{% static "img/facebook.png" %}" alt="facebook"></a>
+         </div>
+    </div>
+   <div class="row own">
+    ©inSHORT
+   </div>
+   <div class="created_by">
+    created by Vlad Myrahovski 2020
+   </div>
+</div>
+</body>
