--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -54,12 +54,18 @@
         <div class="col-md-1 networks_block3"> 
             <a href="#"><img src="{% static "img/facebook.png" %}" alt="facebook"></a>
          </div>
+         <div class="col-md-1 networks_block">
+            <a href="#"><img src="{% static "img/gmail.png" %}" alt="gmail"></a>
+        </div>
+        <div class="col-md-1 networks_block">
+            <a href="#"><img src="{% static "img/help.png" %}" alt="help"></a>
+        </div>
     </div>
    <div class="row own">
     ©inSHORT
    </div>
    <div class="created_by">
-    created by Vlad Myrahovski 2020
+     created by ki-3-group 2020 
    </div>
 </div>
 </body>
