--- a/home/static/css/reg.css
+++ b/home/static/css/reg.css
@@ -93,7 +93,7 @@ height: 15%;
    }
    .container{
     padding-top:3%;
-    padding-bottom:3%;
+    margin-bottom:5%;
     padding-left:3%;
     padding-right:3%;
     border-radius: 10%;
