--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -5,7 +5,7 @@
         <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Maven+Pro" /> -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}" />
         <link rel="stylesheet" href="{% static 'css/faq.css' %}" />
-        <link rel="stylesheet" href="{% static "css/reg.css" %}" />
+        <link rel="stylesheet" href="{% static 'css/reg.css' %}" />
         <script src="{% static 'script/jquery.js' %}" defer></script>
         <script src="{% static 'script/history.js' %}" defer></script>
         <script src="{% static 'script/menu.js' %}" defer></script>
