Add sent push email

--- a/home/templates/FAQ.html
+++ b/home/templates/FAQ.html
@@ -12,7 +12,7 @@
 			<p><input type="search" id="text-search" class="form-control"  size="80%" placeholder="Чим можем допомогти?"></p>
 		  </div>
 		</div>
-		<a type="button" href="https://web.telegram.org/#/im?p=@amurahovskiy1998" class="btn btn-default">Клик</a>
+		<a type="button" href="" class="btn btn-default">Клик</a>
 		  
       </form>		
 	</div>
