add fix size  different block in main page

--- a/home/templates/FAQ.html
+++ b/home/templates/FAQ.html
@@ -7,14 +7,16 @@
 	</div>
 	<div class="form">
 	  <form>
-        <div class="col-md-10">
-          <div class="input-group">
-			<p><input type="search" id="text-search" class="form-control"  size="80%" placeholder="Чим можем допомогти?"></p>
-		  </div>
-		</div>
-		<a type="button" href="" class="btn btn-default">Клик</a>
-		  
-      </form>		
+		<div class="input-group col-md-10">
+			<div id="input_url" class="input_url">
+			  <input  id="sent_messege" type="url" name="sent_messege" class="form-control"  size="300px"   required  placeholder="Відправіть повідомлення тех-підтримці">
+			</div>
+			<span class="input-group-btn">
+			  <button type="button"   data-toggle="tooltip"   class="btn btn-info btn_modal_window " required>
+				Відправити
+			  </button>
+			</span>
+		  </div>	
 	</div>
 	<div class="headline text-center">
 	<p>Ви також можете переглянути теми нижче, щоб знайти те, що шукаєте </p>
