--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   background-color:#f9ffff;
   overflow-x: hidden;	
+  height: 100%;
 }
 .title{
   font-size: 20px; 
@@ -16,36 +17,29 @@ body {
   padding-bottom: 2.5%;
   padding-left:2.5%;
   padding-top: 2.5%;
-  
   height: 15%;
   }
-
 .headline{
-position: relative;
+
+  position: relative;
   margin-top: 2%;
   margin-bottom:2%;
 }
 .form
 {
   padding-top: 2%;
-  padding-bottom: 3%;
+  padding-bottom: 2%;
   position: relative;
-  justify-content: center; 	
-  display: flex;
+
 }
 
 .form-control
 {
   padding-top: 5%;
   position: relative;
-  display: flex;
-  justify-content: center; 	
-  width:700px;
   margin: 0 auto;
 }
-.input-group{
-  margin-left: 0 auto;
- }
+ 
 .menu{
   border-radius: 2%;
 }
@@ -127,6 +121,7 @@ position: relative;
   padding-bottom: 3%;
 }
 .modal .modal_content {
+  min-width: 200px;
   border-radius: 5%;
   border: 3px solid #20aca6;
   background:#c0e4e4;
@@ -158,7 +153,7 @@ list-style: none;
  padding-top: 2%;
 padding-bottom: 2%;
 width: 70%;
-margin: 60px auto 20px;
+margin: 20px auto 20px;
 background: #fff;
 border-radius: 4px;
 }
@@ -186,6 +181,22 @@ li {
     border-radius:0;
     background-color:#fdfaf7;
   }
+  .static{
+    font-size: 18px;
+    text-align:center;
+    padding-top: 2%;
+    padding-bottom: 2.5%;
+    width: 67.5%;
+    margin-left: 17.5%;
+    text-decoration:underline;
+
+background: #fff;
+border-radius: 4px;
+
+  }
+  .static-elem{
+    text-decoration: underline;
+  }
 .container{
   padding-top:3%;
   padding-bottom:3%;
@@ -194,10 +205,20 @@ li {
   border-radius: 10%;
   background:#c0e4e4;
  }
+ .btn-copy{
+  
+ padding-left:1%;
+ padding-right:1%;
+  font-size: 16px;
+  
+ }
  .btn-default{
      background-color:green;
  }
- 
+ .btn-sum
+ {
+   margin-top:10%;
+ }
  .long_url{
   background:rgb(126, 9, 9);
   text-decoration: blink;
@@ -232,8 +253,10 @@ li {
 }
  .networks{
     background-color:#DDECE9;
+    display: flex;
+    justify-self: start;
  }
- 
+  
  .own{
   width:100%;
   text-align: center;
@@ -247,4 +270,3 @@ li {
   width:100%;
   text-align: right;
  }
-
