--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -9,7 +9,7 @@
                {% csrf_token %}
         <div class="input-group col-md-10">
           <div id="input_url" class="input_url">
-            <input  id="long_url" type="url" name="long_url" class="form-control"  size="300px"   required  placeholder="Введіть URL для скорочення.">
+            <input  id="long_url" type="url" name="long_url" class="form-control"   required  placeholder="Введіть URL для скорочення.">
           </div>
           <span class="input-group-btn">
             <button type="button"   data-toggle="tooltip"   class="btn btn-info btn_modal_window " required>
@@ -33,7 +33,7 @@
                   <option value="4">Рік</option>
                   <option value="5">Назавжди</option>
                 </select>
-                <button type="submit" class="btn btn-success">Створити</button>
+                <button type="submit" class="btn btn-success btn-sum">Створити</button>
               </div>
             </div>
           </div>
