Add fix with main page and refactoring

--- a/custom_urls/templates/urls/user_urls.html
+++ b/custom_urls/templates/urls/user_urls.html
@@ -7,7 +7,7 @@
         </div>
     
 </div>
-<ul class="accordion-menu">
+<ul class="history-items">
     
     {% load tz %} <!--for locСтатистика for locСтатистика:5:5altime-->
     {% for url in user_urls %}
