--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -11,13 +11,13 @@
                 {% if error %}
                 <div style="color:red;">{{ error }}</div>
                 {% endif %}
-                <div class="col-xs-12">
+                <div class="col-12">
                     <div class="form-group regis-group">
                         <label for="username" class="cols-sm-2 control-label">Ім'я</label>
                     <input type="text"  name="username" class="form-control" />
                     </div>
                 </div>
-                <div class="col-xs-12">
+                <div class="col-12">
                     <div class="form-group regis-group">
                         <label for="username" class="cols-sm-2 control-label">Пароль</label>
                         <input type="password" name="password" class="form-control" />
