--- a/home/static/css/reg.css
+++ b/home/static/css/reg.css
@@ -32,62 +32,7 @@ height: 15%;
   border-radius: 10%;
   background:#c0e4e4;
 }
-.content-menu .menu-item a {
-  position: relative;
-  z-index: 1;
-  text-transform: uppercase;
-  text-align: center;
-  color: white;
-  cursor: pointer;
-  color:white;
-  font-size: 20px;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: 0.5s;
-}
-.content-menu .menu-item a:hover {
-  color: #fff;
-}
-.content-menu .menu-item a:hover::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  background: #258fd6;
-  transition: 0.5s;
-  animation: animate .5s linear forwards; 
-}
-@keyframes animate {
-  0% {
-    top: calc(50% - 2px);
-    left: -100%;
-    height: 4px;
-    z-index: 1;
-  }
-  50% {
-    top: calc(50% - 2px);
-    left: 0;
-    height: 4px;
-    z-index: 1;
-  }
-  100% {
-    top: 0;
-    left: 0;
-    height: 100%;
-    z-index: -1;
-  }
-}
-.menu .animation {
-  position: absolute;
-  height: 100%;
-  transition: all .5s ease 0s;
-  border-radius: 8px;
-}
 
-   span.input-group-addon i {
-    color: #7ca772;
-    font-size: 17px;
-   }
-   
    .registrate{
     color:#20b1aa;
     background:#f9ffff;
@@ -104,9 +49,21 @@ height: 15%;
        background-color:green;
    }
   
-   .btn-facebook {background-color: #4267b2;width:30%;color: #fff;}
-.btn-facebook:hover {background-color: #365899; color: #fff;}
+   .btn-facebook {
+     background-color: #4267b2;
+     width:30%;
+     color: #fff;
+    }
+.btn-facebook:hover {
+  background-color: #365899; 
+  color: #fff;
+}
  
-.btn-google {background-color: #1da1f2;width:30%;color: #fff;}
-.btn-google {background-color: #da671a; color: #fff;}
+.btn-google {
+  background-color: #1da1f2;
+  width:30%;
+  color: #fff;}
+.btn-google {
+  background-color: #da671a; 
+  color: #fff;}
  
