--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -43,10 +43,8 @@ body {
 .menu{
   border-radius: 2%;
 }
-.menu-item{
-  padding-left: 5%;
-}
-.data-ur-group{
+
+.data-group{
   width: 40%;
   margin: 0 auto;
   border-radius: 10%;
@@ -55,58 +53,19 @@ body {
 .content-menu .menu-item a {
   position: relative;
   z-index: 1;
-  text-transform: uppercase;
   text-align: center;
   color: white;
   cursor: pointer;
-  color:white;
   font-size: 20px;
   text-decoration: none;
-  text-transform: uppercase;
+ 
   transition: 0.5s;
-}
-.content-menu .menu-item a:hover {
-  color: #fff;
-}
-.content-menu .menu-item a:hover::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  background: #258fd6;
-  transition: 0.5s;
-  animation: animate .5s linear forwards; 
-}
-@keyframes animate {
-  0% {
-    top: calc(50% - 2px);
-    left: -100%;
-    height: 4px;
-    z-index: 1;
-  }
-  50% {
-    top: calc(50% - 2px);
-    left: 0;
-    height: 4px;
-    z-index: 1;
-  }
-  100% {
-    top: 0;
-    left: 0;
-    height: 100%;
-    z-index: -1;
-  }
-}
-.menu .animation {
-  position: absolute;
-  height: 100%;
-  transition: all .5s ease 0s;
-  border-radius: 8px;
 }
 .headline{
   position: relative;
 }
 
-.modal {
+.window {
   padding: 5%;
   display: none;
   position: fixed;
@@ -120,7 +79,7 @@ body {
 .text-center{
   padding-bottom: 3%;
 }
-.modal .modal_content {
+.window .window_content {
   min-width: 200px;
   border-radius: 5%;
   border: 3px solid #20aca6;
@@ -130,12 +89,9 @@ body {
   padding-top:3%;
   padding-bottom:3%;
   width: 20%;
-  z-index: 99999;
+  z-index: 99998;
 }
-.modal .modal_content .close_modal_window {
-  color: #aaa;
-  cursor: pointer;
-}
+ 
 .form-control
 {
   padding-bottom: 5%;
@@ -149,7 +105,7 @@ body {
 ul { 
 list-style: none;
 }
-.accordion-menu {
+.history-items {
  padding-top: 2%;
 padding-bottom: 2%;
 width: 70%;
