--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -17,11 +17,11 @@
             </button>
           </span>
         </div>
-        <div id="my_modal" class="modal">
-          <div class="modal_content">
+        <div id="my_modal" class="window modal">
+          <div class="modal_content window_content">
             <label class="text-center cols-sm-12 ">Заповніть<label>
             <div class="close_modal_window"></div>
-             <div class="form-group data-ur-group">
+             <div class="form-group data-group">
                 <label for="username" class="cols-sm-2 control-label">Скорочення</label>
                 <input type="text" name="short_url" class="form-control" />
                 <label>Буде дійсна </label>
