--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -47,16 +47,16 @@
   <div class="footer">
     <div class="row networks">
         <div class="col-md-1 networks_block1">
-            <a href="#"><img src="{% static "img/instagram.png" %}" alt="instagram"></a>
+            <a href="https://www.instagram.com/vlad1998.myrahovski/?igshid=tgl5aohlp262"><img src="{% static "img/instagram.png" %}" alt="instagram"></a>
         </div>
         <div class="col-md-1 networks_block2">
-            <a href="#"><img src="{% static "img/telegram.png" %}" alt="telegram"></a>
+            <a href="https://web.telegram.org/#/im?p=@amurahovskiy1998"><img src="{% static "img/telegram.png" %}" alt="telegram"></a>
         </div>
         <div class="col-md-1 networks_block3"> 
             <a href="#"><img src="{% static "img/facebook.png" %}" alt="facebook"></a>
          </div>
          <div class="col-md-1 networks_block">
-            <a href="#"><img src="{% static "img/gmail.png" %}" alt="gmail"></a>
+            <a href="https://mail.google.com/mail/u/1/#inbox"><img src="{% static "img/gmail.png" %}" alt="gmail"></a>
         </div>
         <div class="col-md-1 networks_block">
             <a href="#"><img src="{% static "img/help.png" %}" alt="help"></a>
