--- a/home/templates/FAQ.html
+++ b/home/templates/FAQ.html
@@ -9,10 +9,10 @@
 	  <form>
 		<div class="input-group col-md-10">
 			<div id="input_url" class="input_url">
-			  <input  id="sent_messege" type="url" name="sent_messege" class="form-control"  size="300px"   required  placeholder="Відправіть повідомлення тех-підтримці">
+			  <input  id="sent_messege" type="text" name="sent_messege" class="form-control"  size="300px"   required  placeholder="Відправіть повідомлення тех-підтримці">
 			</div>
 			<span class="input-group-btn">
-			  <button type="button"   data-toggle="tooltip"   class="btn btn-info btn_modal_window " required>
+			  <button type="button" id="sent_email"  data-toggle="tooltip"   class="btn btn-info btn_modal_window " required>
 				Відправити
 			  </button>
 			</span>
@@ -54,5 +54,5 @@
 	  </div>
 	</div>
 </div>
-<script src="{% static 'script/search.js' %}" defer></script>
+
 {% endblock %}
