--- a/custom_urls/templates/urls/user_urls.html
+++ b/custom_urls/templates/urls/user_urls.html
@@ -1,16 +1,16 @@
 <div class="static  ">
     <div class="col-6 col-md-6 text-align static-elem">
-        Загальна кількість скорочень: 5  
+        Загальна кількість скорочень: {{ urls_total }}
         </div>
         <div class="col-6 col-md-6 text-align static-elem">
-        Кількість активних скорочень: 5  
+        Кількість активних скорочень: {{ active_urls|length }} 
         </div>
     
 </div>
 <ul class="history-items">
     
     {% load tz %} <!--for locСтатистика for locСтатистика:5:5altime-->
-    {% for url in user_urls %}
+    {% for url in active_urls %}
     
     <li class="for_border">
         
@@ -19,7 +19,7 @@
         </div>
 
         <div id='copyTarget{{ forloop.counter }}'class="col-6 col-md-3 word-break ">
-            {{ url.full_inshort_url }}
+            <a href="{{ url.full_inshort_url }}">{{ url.full_inshort_url }}</a>
         </div>
         <div onclick="copyToClipboard('copyTarget{{ forloop.counter}}')" class="col-6 col-md-1  ">
             <button class="btn-copy">Copy</button>
@@ -29,14 +29,14 @@
         </div>
         <div class="dropdownlink row" >
             <div class="col-5 col-md-2  for_border_item4  word-break">
-                Переходів:<a>{{ url.visit_set.count }}</a>
+                <a>Переходи: {{ url.visit_set.count }}</a>
             </div>
         </div>
 
         <ul class="submenuItems">
             <div class="row title">
                 <div class="col-6 col-md-3">
-                    Час
+                    Час Дата
                 </div>
                 <div class="col-6 col-md-3">
                     IP-адреса
@@ -55,7 +55,7 @@
                         {% endtimezone %}<!--to Ukraine time-->
                     </div>
                     <div class="col-6 col-md-3">
-                       {{ visit.visitor_ip }}
+                        {{ visit.visitor_ip }}
                     </div>
                     <div class="col-6 col-md-3">
                         {{ visit.visitor_city }}
