--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -23,7 +23,7 @@
             <div class="close_modal_window"></div>
              <div class="form-group data-group">
                 <label for="username" class="cols-sm-2 control-label">Скорочення</label>
-                <input type="text" name="short_url" class="form-control" />
+                <input type="text" name="short_url" class="form-control short_url" id="short_url"/>
                 <label>Буде дійсна </label>
                 <select id="myList">
                   <option value="0">5хв</option>
