--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -19,7 +19,7 @@
         </div>
         <div class="col-6 col-md-6">
             <div class="content-menu">
-                <div class="col-6 col-md-4 menu-item"><a href="{% url 'home' %}">Home</a></div>
+                <div class="col-6 col-md-4 menu-item"><a href="{% url 'home' %}">HOME</a></div>
                 <div class="col-6 col-md-4 menu-item"><a href="{% url 'FAQ' %}">FAQ</a></div>
             </div>
            
