--- a/home/templates/FAQ.html
+++ b/home/templates/FAQ.html
@@ -9,7 +9,7 @@
 	  <form>
 		<div class="input-group col-md-10">
 			<div id="input_url" class="input_url">
-			  <input  id="sent_messege" type="text" name="sent_messege" class="form-control"  size="300px"   required  placeholder="Відправіть повідомлення тех-підтримці">
+			  <input  id="sent_messege" type="text" name="sent_messege" class="form-control input-url"  size="300px"   required  placeholder="Відправіть повідомлення тех-підтримці">
 			</div>
 			<span class="input-group-btn">
 			  <button type="button" id="sent_email"  data-toggle="tooltip"   class="btn btn-info btn_modal_window " required>
