--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -44,7 +44,8 @@
   </div>
   {% block content %}
   {% endblock %}
-  <div class="footer navbar-fixed-bottom">
+<div class="foot"></div>
+  <div class="footer navbar-fixed-bottom row-fluid">
     <div class="row networks " >
         <div class="col-md-1 networks_block1">
             <a href="https://www.instagram.com/vlad1998.myrahovski/?igshid=tgl5aohlp262"><img src="{% static "img/instagram.png" %}" alt="instagram"></a>
