--- a/custom_urls/templates/urls/user_urls.html
+++ b/custom_urls/templates/urls/user_urls.html
@@ -2,15 +2,10 @@
     <div class="col-6 col-md-6 text-align static-elem">
         Загальна кількість скорочень:5  
         </div>
-    <div class="col-6 col-md-6 text-align static-elem">
-        Загальна кількість активних скорочень:5  
-    </div>
-    <div class="col-6 col-md-6 text-align static-elem">
-        Кількість скорочень,які зникнуть через добу:5 
+        <div class="col-6 col-md-6 text-align static-elem">
+            Закальна кількість активних скорочень:5  
         </div>
-    <div class="col-6 col-md-6 text-align static-elem">
-        Кількість скорочень,які зникнуть через годину:5
-    </div>
+    
 </div>
 <ul class="history-items">
     
