--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -4,14 +4,13 @@ body {
   padding: 0;
   background-color:#f9ffff;
   overflow-x: hidden;	
-  height: 100%;
+  
+  min-width: 590px;
 }
- 
 
 .title {
   font-size: 20px;
   color: white;
- 
  
 }
 .head{
@@ -194,31 +193,26 @@ li {
 }
 /* Footer */
 .footer{
- 
   min-width: 590px;
- 
   background-color:#DDECE9;
-
-  width:100%;
-  height: 100%;
   padding-top: 1%;
   padding-left: 3%;
-  
+   max-height: 100%;
+  position: relative;
  }
- .networks_block{
- width: 32px;
- height:32px;
-
- padding-right:1%;
-}
+ 
  .networks{
+ 
+   height: 100%;
+   display: flex;
+  justify-content: end;
+  position: relative;
+ 
     background-color:#DDECE9;
-    display: flex;
-    justify-self: start;
+
  }
   
  .own{
-  width:100%;
   text-align: center;
   color: #20B1AA;
   font-size: 25px;
@@ -227,6 +221,6 @@ li {
   font-style: normal;
   text-align: right;
   color: #45C2B9;
-  width:100%;
+ 
   text-align: right;
  }
