--- a/home/templates/FAQ.html
+++ b/home/templates/FAQ.html
@@ -9,7 +9,7 @@
 	  <form>
 		<div class="input-group col-md-10">
 			<div id="input_url" class="input_url">
-			  <input  id="sent_messege" type="text" name="sent_messege" class="form-control"  size="300px"   required  placeholder="Відправіть повідомлення тех-підтримці">
+			  <input  id="sent_messege" type="text" name="sent_messege" class="form-control inp-url"  size="300px"   required  placeholder="Відправіть повідомлення тех-підтримці">
 			</div>
 			<span class="input-group-btn">
 			  <button type="button" id="sent_email"  data-toggle="tooltip"   class="btn btn-info btn_modal_window " required>
@@ -37,20 +37,12 @@
 		<p>Фішингові веб-сайти можуть бути настільки ж небезпечними, як і сайти зловмисних програм. Вони намагаються ввести своїх відвідувачів у розкриття особистих даних (таких як імена, паролі, адреси та дані облікового запису)<a href="#">...</a></p>
 	  </div>
 	  <div class="text-block1 col-md-3">
-	    <h4>Чи буде збережена моя IP-адреса чи інші особисті дані, коли я створю коротке посилання?</h4>
-		<p>Ні Ми нічого не економимо. Лише коротка URL-адреса, яку ви встановили, та пов’язані з цим налаштування. Ми не зацікавлені в тому, щоб ми самі стали прозорими громадянами</p>
-	  </div>
-	  <div class="text-block1 col-md-3">
 	    <h4>Оптимізація посилань</h4>
 		<p>Оптимізуйте та налаштовуйте кожну коротеньку URL-адресу, щоб скористатися її можливостями. Встановіть власний псевдонім (ім’я), використовуйте його в партнерських програмах, отримуйте QR-код для друку листовок та багато іншого.</p>
 	  </div>
 	  <div class="text-block1 col-md-3">
 	    <h4>Детальна аналітика</h4>
 		<p>Відстежуйте кожну скорочену посилання в реальному часі та оцінюйте її ефективність, щоб зрозуміти її. Детальна аналітика надає вам інформацію про кліки.</p>
-	  </div>
-	  <div class="text-block1 col-md-3">
-	    <h4>Скорочення посилань</h4>
-		<p>Безкоштовна користувацька скорочена URL-адреса з багатьма функціями, що забезпечує кращу якість скорочення посилань. Скорочені URL-адреси ніколи не закінчиться. Ми не відображаємо об’яви під час прямої переадресації на вихідний URL.</p>
 	  </div>
 	</div>
 </div>
