--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -44,6 +44,8 @@
   </div>
   {% block content %}
   {% endblock %}
+  <div class="foot"></div>
+
   <div class="footer navbar-fixed-bottom">
     <div class="row networks " >
         <div class="col-md-1 networks_block1">
