--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -8,8 +8,8 @@
       <form method="POST" action="{% url 'add_url' %}"  class="form">
                {% csrf_token %}
         <div class="input-group col-md-10">
-          <div id="input_url" class="input_url">
-            <input  id="long_url" type="url" name="long_url" class="form-control"   required  placeholder="Введіть URL для скорочення.">
+          <div id="input_url">
+            <input  id="long_url" type="url" name="long_url" class="form-control inp-url"   required  placeholder="Введіть URL для скорочення.">
           </div>
           <span class="input-group-btn">
             <button type="button"   data-toggle="tooltip"   class="btn btn-info btn_modal_window " required>
@@ -23,7 +23,7 @@
             <div class="close_modal_window"></div>
              <div class="form-group data-group">
                 <label for="username" class="cols-sm-2 control-label">Скорочення</label>
-                <input type="text" name="short_url" class="form-control" />
+                <input type="text" name="short_url" class="form-control  " />
                 <label>Буде дійсна </label>
                 <select id="myList">
                   <option value="0">5хв</option>
