Add id for short url

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -24,7 +24,7 @@
              <div class="form-group data-group">
                 <label for="username" class="cols-sm-2 control-label">Скорочення</label>
  
-                <input type="text" name="short_url" class="form-control  " />
+                <input type="text" name="short_url" class="form-control  " id="short_url"/>
  
                 <label>Буде дійсна </label>
                 <select id="myList" name="time">
