--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -33,7 +33,7 @@ body {
 }
 .form
 {
-  padding-right:3.5% ;
+  
   padding-bottom: 2%;
   position: relative;
 }
@@ -90,10 +90,10 @@ body {
   z-index: 99998;
 }
  
-.inp-url
+.input-url
 {
-  max-width: 69.5%;
-  margin-left:  30.5%;
+  max-width: 75.5%;
+  margin-left:  24.5%;
   padding-bottom: 5%;
   position: relative;
   display: flex;
