--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -9,6 +9,7 @@
         <script src="{% static 'script/history.js' %}" defer></script>
         <script src="{% static 'script/menu.js' %}" defer></script>
         <script src="{% static 'script/sent_email.js' %}" defer></script>
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
