--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -24,9 +24,9 @@
                     </div>
                 </div>
                 <div class="text-center col-xs-12 container">
-                    <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-facebook">Facebook</a>
+                    <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}" class="btn btn-facebook">Facebook</a>
                     <button type="submit" class="btn btn-success">Зайти</button>
-                    <a href="{% url 'social:begin' 'google-oauth2' %}" class=" btn btn-google">Google</a>
+                    <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.path }}" class=" btn btn-google">Google</a>
                 </div>
             </form>
         </div>
