--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -35,7 +35,8 @@ body {
 {
   
   padding-bottom: 2%;
-  position: relative;
+  padding-right:3.5%;
+   
 }
 .menu{
   border-radius: 2%;
@@ -92,8 +93,9 @@ body {
  
 .input-url
 {
-  max-width: 75.5%;
-  margin-left:  24.5%;
+  max-width: 69.5%;
+  margin-left:  30.5%;
+
   padding-bottom: 5%;
   position: relative;
   display: flex;
@@ -192,7 +194,7 @@ li {
   box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
 }
 .foot{
-  min-height: calc(100vh - 80px);
+  min-height: calc(105vh - 80px);
 }
 /* Footer */
 .footer{
