add link for facebook

--- a/home/templates/FAQ.html
+++ b/home/templates/FAQ.html
@@ -42,16 +42,13 @@
 	  </div>
 	  <div class="text-block1 col-md-3">
 	    <h4>Оптимізація посилань</h4>
-		<p>Оптимізуйте та налаштовуйте кожну коротеньку URL-адресу, щоб скористатися її можливостями. Встановіть власний псевдонім (ім’я), використовуйте його в партнерських програмах, отримуйте QR-код для друку листовок та багато іншого.</p>
+		<p>Оптимізуйте та налаштовуйте кожну коротеньку URL-адресу, щоб скористатися її можливостями. Встановіть власний псевдонім (ім’я), використовуйте його в партнерських програмах</p>
 	  </div>
 	  <div class="text-block1 col-md-3">
 	    <h4>Детальна аналітика</h4>
-		<p>Відстежуйте кожну скорочену посилання в реальному часі та оцінюйте її ефективність, щоб зрозуміти її. Детальна аналітика надає вам інформацію про кліки.</p>
+		<p>Відстежуйте кожну скорочену посилання в реальному часі та оцінюйте її ефективність, щоб зрозуміти її. </p>
 	  </div>
-	  <div class="text-block1 col-md-3">
-	    <h4>Скорочення посилань</h4>
-		<p>Безкоштовна користувацька скорочена URL-адреса з багатьма функціями, що забезпечує кращу якість скорочення посилань. Скорочені URL-адреси ніколи не закінчиться. Ми не відображаємо об’яви під час прямої переадресації на вихідний URL.</p>
-	  </div>
+	 
 	</div>
 </div>
 
