fixed bugs, refresh db, forse https, add sosial links

--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -36,9 +36,9 @@
                         </div>
                     </div>
                     <div class="text-center col-xs-12 container">
-                        <a href="" class="btn btn-facebook" > Facebook</a>
+                        <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-facebook" > Facebook</a>
                         <button type="submit" class="btn btn-success">Створити</button>
-                        <a  href="" class=" btn btn-google">Google</a>
+                        <a  href="{% url 'social:begin' 'google-oauth2' %}" class=" btn btn-google">Google</a>
                     </div>
                 </form>
             </div>
