Add min len for password and login

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -14,13 +14,13 @@
                 <div class="col-12">
                     <div class="form-group regis-group">
                         <label for="username" class="cols-sm-2 control-label">Ім'я</label>
-                        <input type="text" name="username" class="form-control" />
+                        <input type="text" required minlength="6"  name="username" class="form-control" />
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="form-group regis-group">
-                        <label for="username" class="cols-sm-2 control-label">Пароль</label>
-                        <input type="password" name="password" class="form-control" />
+                        <label for="username" class="cols-sm-2 control-label " required>Пароль</label>
+                        <input type="password" required minlength="6" name="password" class="form-control" />
                     </div>
                 </div>
                 <div class="text-center col-xs-12 container">
