--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -14,25 +14,25 @@
                     <div class="col-xs-12">
                         <div class="form-group regis-group">
                             <label for="username" class="cols-sm-2 control-label" required>Ім'я</label>
-                        <input type="text"  name="username" class="form-control" required/>
+                        <input type="text"  name="username" class="form-control" minlength="6" required/>
                         </div>
                     </div>
                     <div class="col-xs-12">
                         <div class="form-group regis-group">
                             <label for="username" class="cols-sm-2 control-label" required>Email</label>
-                            <input type="email" name="email" class="form-control" required/>
+                            <input type="email" name="email" class="form-control" minlength="6" required/>
                         </div>
                     </div>
                     <div class="col-xs-12">
                         <div class="form-group regis-group">
-                            <label for="username" class="cols-sm-2 control-label" required>Пароль</label>
-                            <input type="password" name="password" class="form-control" required/>
+                            <label for="username" class="cols-sm-2 control-label" required >Пароль</label>
+                            <input type="password" name="password" class="form-control" minlength="6"  required/>
                         </div>
                     </div>
                     <div class="col-xs-12">
                         <div class="form-group regis-group">
                             <label for="username" class="cols-sm-2 control-label" required>Підтвердження паролю</label>
-                            <input type="password" name="password2" class="form-control" required />
+                            <input type="password" name="password2" class="form-control" minlength="6"  required />
                         </div>
                     </div>
                     <div class="text-center col-xs-12 container">
