add help url, and mail url

--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -58,10 +58,10 @@
             <a href="#"><img src="{% static "img/facebook.png" %}" alt="facebook"></a>
          </div>
          <div class="col-md-1 networks_block">
-            <a href="https://mail.google.com/mail/u/1/#inbox"><img src="{% static "img/gmail.png" %}" alt="gmail"></a>
+            <a href="mailto:inshort074@gmail.com"><img src="{% static "img/gmail.png" %}" alt="gmail"></a>
         </div>
         <div class="col-md-1 networks_block">
-            <a href="#"><img src="{% static "img/help.png" %}" alt="help"></a>
+            <a href="{% url 'FAQ' %}"><img src="{% static "img/help.png" %}" alt="help"></a>
         </div>
     </div>
    <div class="row own">
